samples/_failures_safe/1761501809_d0076a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c050d869.c: In function ‘main’:
./samples/SAFE/__tmp_c050d869.c:146:12: error: expected declaration or statement at end of input
  146 |     struct Matrix a = create_matrix(rows1, cols1);
      |            ^~~~~~
